# CometInfinity_Bot

./: .env  .env.dev  .gitignore  README.md  chunithm_best_30.py  new_lcst_base_img.py  player_data.json  pyproject.toml  test.py  testt.py
data/: bind_data.json
src/lib/: utils.py
src/lib/client/: diving_fish_client.py
src/plugins/bind/: __init__.py
src/plugins/choice/: __init__.py
src/plugins/chunithm/: __init__.py  json_update.py
src/plugins/chunithm/lib/: MusicPic.py  chart.py  chunithm_best_30.py  chunithm_music.py  chunithm_score_list.py  class_utils.py  divingFishApi.py  image.py  request_client.py  tool.py
src/plugins/chunithm/music_data/: from.json  music_data.json
src/plugins/except_log/: __init__.py
src/plugins/fast_api/: __init__.py
src/plugins/help/: __init__.py
src/plugins/maimai/: __init__.py
src/plugins/maimai/lib/: MusicPic.py  completion_utils.py  id_to_plate_name.json  image.py  mai_best_50.py  mai_lv_score.py  mai_plate_completion.py  mai_score.py  music.py  music_data_counter.py  plate_map.py  pro_groups.json  request_client.py  score_line.py  tool.py
src/plugins/maimai/lib/temp/: testdata2_lxns.json  testdata_lxns.json
src/plugins/maimai/music_data/: maidxCN-Today.json  maidxCN-bk.json  maidxCN.json
src/plugins/ping/: __init__.py
src/plugins/temp_black_list/: __init__.py  black_list_handle.py
src/plugins/today/: __init__.py  config.py  data.py  utils.py
src/plugins/today/music/: chu.py  mai.py
src/static/chu/b30/nameplate/: desktop.ini
src/static/today/user/: fortune_data.json
