[project]
name = "AmiaBOT"
version = "0.1.0"
description = "AmiaBOT"
readme = "README.md"
requires-python = ">=3.11, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    { name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12" }
]
plugins = ["nonebot_plugin_apscheduler"]
plugin_dirs = ["src/plugins"]
builtin_plugins = []


[tool.poetry]
name = "AmiaBOT"
version = "0.1.0"
description = "A brief description of your project"
authors = [
    "Ekzykes <atlaseuan@163.com>",
]
package-mode = false


[tool.poetry.dependencies]
python = "<3.13,>=3.11"
nb-cli = "^1.4.1"
nonebot2 = {extras = ["fastapi"], version = "^2.3.3"}
nonebot-adapter-onebot = "^2.4.4"
aiohttp = "^3.10.4"
nonebot-plugin-apscheduler = "^0.5.0"
pillow = "9.5.0"
aiofiles = "^24.1.0"
zhdate = "^0.1"
pydantic = "1.10.13"

[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"